# table-talk

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
corpus/: videos.yaml
prompts/: extract_hole_cards.md  extract_player_info.md  identify_hand.md  identify_hand_start.md
schemas/: clip_manifest.json  clip_processing_attempts.json  hand_setup_processing_attempts.json  hand_setups.json  hand_starts.json  video_ingestion_attempts.json
scripts/: gen_schemas.py
src/table_talk/: __init__.py  bq_utils.py  card_normalization.py  cli.py  clip_manifest_writer.py  clip_materialization.py  clip_processing_attempts_writer.py  frame_extractor.py  frame_uploader.py  gemini_caller.py  hand_setup_processing.py  hand_setup_processing_attempts_writer.py  hand_setups_writer.py  hand_starts_writer.py  ingest.py  manifest.py  prompt_context.py  seat_enrichment.py  timestamp_utils.py  video_ingestion_attempts_writer.py  videos_downloader.py  videos_fetcher.py  (+2 more)
terraform/: .gitignore  README.md
tests/: test_bq_utils.py  test_card_normalization.py  test_clip_manifest_writer.py  test_clip_materialization.py  test_clip_processing_attempts_writer.py  test_frame_extractor.py  test_frame_uploader.py  test_gemini_caller.py  test_gen_schemas.py  test_hand_setup_processing.py  test_hand_setup_processing_attempts_writer.py  test_hand_setups_writer.py  test_hand_starts_writer.py  test_ingest.py  test_manifest.py  test_prompt_context.py  test_seat_enrichment.py  test_smoke.py  test_timestamp_utils.py  test_video_ingestion_attempts_writer.py  test_videos_downloader.py  test_videos_fetcher.py  test_videos_uploader.py  test_videos_writer.py
(+45 files in other folders)
