[project]
name = "table-talk"
version = "0.1.0"
description = "Conversational analytics agent over a BigQuery poker dataset, sourced from final-table video replays."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Jameel Harris" }]

dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/table_talk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that hit real GC resources; require ADC auth",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
